# the_silver_searcher

./: .gitignore  CMakeLists.txt  FindPCRE.cmake  config.h.in
doc/: CMakeLists.txt
src/: CMakeLists.txt  log.c  options.c  util.c
